# vicon_to_octomap

./: CMakeLists.txt  README.md  package.xml
include/: genocto.hpp
launch/: demo.launch  run.launch  view.launch
launch/rviz_config/: default.rviz  demo.rviz
src/: demo.cpp  genocto.cpp  test.cpp  test.py
world/: temp_octomap.bt  vicon_room.bt  vicon_room_high_res.bt  vicon_room_obs.bt
